--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,9 @@
+/* ============ for all - start =========== */
+* {
+  box-sizing: border-box;
+  margin: 0;
+}
+
 body {
   font-family: "Roboto", sans-serif;
   color: #434455;
@@ -7,16 +13,33 @@ body {
   line-height: 1.31; /* font-size / line-height = */
   letter-spacing: 0.32px;
   font-style: normal;
-  margin: 0;
+}
+
+section {
+  padding: 120px 0;
 }
 
 ul {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
   list-style: none;
 }
 
 a {
   text-decoration: none;
   color: #2e2f42;
+}
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+  padding: 0;
 }
 
 .one-h {
@@ -26,15 +49,9 @@ a {
   font-size: 56px;
   line-height: 1.07;
 }
-.two-h {
-  color: #2e2f42;
-  font-size: 36px;
-  font-weight: 700;
-  line-height: 1.11;
-  letter-spacing: 0.72px;
-  text-transform: capitalize;
-}
+
 .three-h {
+  margin: 0;
   color: #2e2f42;
   font-weight: 500;
   font-size: 20px;
@@ -42,74 +59,22 @@ a {
   letter-spacing: 0.4px;
 }
 
-button {
-  background-color: #4d5ae5;
-  cursor: pointer;
+.container {
+  max-width: 1158px;
+  padding-left: 156px;
+  padding-right: auto;
+  margin: 0 auto;
 }
-button:hover {
-  background-color: #404bbf;
-}
-button:focus {
-  background-color: #404bbf;
-}
-.main-button {
-  font-weight: 500;
-  color: #fff;
-  letter-spacing: 0.64px;
-  line-height: 1.5;
-  font-family: "Roboto", sans-serif;
+/* ============ for all - end =========== */
+
+/*  =========== header-start ============ */
+.header {
+  flex-grow: 0;
 }
 
-.header-nav {
-  font-weight: 500;
-  line-height: 1.5;
-}
-
-.header-menu {
-  color: #2e2f42;
-}
-
-.li-studio-header-menu:hover {
-  color: #404bbf;
-}
-.li-studio-header-menu:focus {
-  color: #404bbf;
-}
-
-.head-address {
-  line-height: 1.5;
-  font-style: normal;
-}
-.list-head-address {
-  color: #434455;
-}
-.list-head-address:hover {
-  color: #404bbf;
-}
-.list-head-address:focus {
-  color: #404bbf;
-}
-
-.main-title {
-  background-color: #2e2f42;
-  text-align: center;
-}
-
-.main-p {
-  line-height: 1.5;
-}
-
-.main-list-team {
-  background-color: #f4f4fd;
-  text-align: center;
-}
-
-.li-main-list {
-  background-color: #ffffff;
-}
-
-.main-list-portfolio {
-  text-align: center;
+.conteiner-header {
+  display: flex;
+  flex-direction: row;
 }
 
 .header-logo,
@@ -125,21 +90,202 @@ button:focus {
 .header-color-logo {
   color: #2e2f42;
 }
-.footer-color-logo {
-  color: #f4f4fd;
+
+.header-logo {
+  padding: 25.5px 0 25.5px 156px;
+  display: flex;
 }
-/*   .header-logo:hover,
-.footer-logo:hover,
-.header-color-logo:hover,
-.footer-color-logo:hover {
+
+.header-nav {
+  font-weight: 500;
+  line-height: 1.5;
+  display: flex;
+  flex-direction: row;
+}
+
+.header-menu {
+  color: #2e2f42;
+  display: flex;
+  gap: 40px;
+  padding: 24px 76px;
+}
+
+.li-studio-header-menu:hover {
   color: #404bbf;
-}   */
+}
+.li-studio-header-menu:focus {
+  color: #404bbf;
+}
+
+.header-address {
+  line-height: 1.5;
+  font-style: normal;
+}
+.list-header-address {
+  color: #434455;
+}
+.list-header-address:hover {
+  color: #404bbf;
+}
+.list-header-address:focus {
+  color: #404bbf;
+}
+
+.header-menu-address {
+  display: flex;
+  gap: 40px;
+  padding: 24px 0 24px 332px;
+}
+
+/* ============ header-end ============ */
+
+/* ============ main-start ============*/
+.main {
+  flex-grow: 1;
+}
+
+/* === section 1 === */
+.main-title {
+  background-color: #2e2f42;
+  text-align: center;
+  padding: 188px;
+  padding-left: 472px;
+  padding-right: 472px;
+}
+
+button {
+  background-color: #4d5ae5;
+  cursor: pointer;
+  margin-top: 48px;
+  border-radius: 4px;
+}
+button:hover {
+  background-color: #404bbf;
+}
+button:focus {
+  background-color: #404bbf;
+}
+.main-button {
+  font-weight: 500;
+  color: #fff;
+  letter-spacing: 0.64px;
+  line-height: 1.5;
+  font-family: "Roboto", sans-serif;
+  padding: 16px 32px;
+}
+/* === section 2 === */
+.main-p {
+  margin: 0;
+  line-height: 1.5;
+  width: 264px;
+}
+
+.ul-main-list {
+  display: flex;
+  flex-direction: row;
+  gap: 24px;
+  padding-left: 156px;
+}
+/* === section 3 === */
+.h-main-list-team {
+  padding-bottom: 72px;
+  margin: 0;
+  color: #2e2f42;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.11;
+  letter-spacing: 0.72px;
+  text-transform: capitalize;
+}
+
+.main-list-team {
+  background-color: #f4f4fd;
+  text-align: center;
+}
+
+.li-main-list-team {
+  background-color: #ffffff;
+  border-radius: 0px 0px 4px 4px;
+  background: var(--WHITE, #fff);
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+}
+
+.main-text-team {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  padding: 32px 0;
+}
+
+.main-list-portfolio {
+  text-align: center;
+}
+
+.ul-main-list-team {
+  display: flex;
+  gap: calc((10% - 24px) / 4);
+  padding-left: 156px;
+}
+/* === section 4 === */
+.h-main-list-portfolio {
+  padding-bottom: 72px;
+  margin: 0;
+  color: #2e2f42;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.11;
+  letter-spacing: 0.72px;
+  text-transform: capitalize;
+}
+
+.ul-main-list-portfolio {
+  display: flex;
+  flex-direction: row;
+  gap: 24px;
+  padding-left: 156px;
+  padding-right: 156px;
+  padding-bottom: 48px;
+}
+
+.li-main-list-portfolio {
+  text-align: left;
+  border: 1px solid #e7e9fc;
+  background: #fff;
+}
+
+.main-text-portfolio {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  margin: 32px 10px;
+}
+/* ============ main-end ============*/
+
+/* ============ footer-start ============ */
 
 .footer {
   background-color: #2e2f42;
+  flex-shrink: 0;
+}
+
+.footer-conteiner {
+  display: flex;
+  flex-direction: column;
+  padding: 101px 156px;
+  gap: 17.5px;
+}
+
+.footer-color-logo {
+  color: #f4f4fd;
 }
 
 .footer-p {
+  margin: 0;
   color: #f4f4fd;
   line-height: 1.5;
+  width: 264px;
 }
+
+/* ============ footer-end =============*/
