--- a/css/styles.css
+++ b/css/styles.css
@@ -62,7 +62,7 @@ h6 {
 .container {
   max-width: 1158px;
   padding-left: 156px;
-  padding-right: auto;
+  padding-right: 156px;
   margin: 0 auto;
 }
 /* ============ for all - end =========== */
