--- a/css/styles.css
+++ b/css/styles.css
@@ -288,7 +288,7 @@ button:focus {
   margin-bottom: 72px;
 }
 
-.p-main-portfolio {
+.h-main-portfolio {
   color: #2e2f42;
   font-weight: 500;
   font-size: 20px;
