--- a/css/styles.css
+++ b/css/styles.css
@@ -120,6 +120,7 @@ section {
 .header-address {
   line-height: 1.5;
   font-style: normal;
+  margin-left: auto;
 }
 .list-header-address {
   color: #434455;
@@ -134,7 +135,7 @@ section {
 .header-menu-address {
   display: flex;
   gap: 40px;
-  padding: 24px 0 24px 332px;
+  padding: 24px 0;
 }
 
 /* ============ header-end ============ */
@@ -159,8 +160,6 @@ section {
   background-color: #2e2f42;
   text-align: center;
   padding: 188px 0;
-  display: flex;
-  justify-content: center;
 }
 
 button {
@@ -191,6 +190,7 @@ button:focus {
 /* === section 2 === */
 .main-h {
   margin-bottom: 8px;
+  font-weight: 500;
 }
 
 .main-p {
@@ -237,6 +237,7 @@ button:focus {
 .h-main-team {
   text-align: center;
   margin-bottom: 8px;
+  font-weight: 500;
 }
 
 .p-main-team {
@@ -258,8 +259,6 @@ button:focus {
 }
 
 .main-text-team {
-  display: flex;
-  flex-direction: column;
   gap: 8px;
   padding: 32px 0;
 }
@@ -297,7 +296,6 @@ button:focus {
   flex-wrap: wrap;
   column-gap: 24px;
   row-gap: 48px;
-  padding-bottom: 48px;
 }
 
 .li-main-list-portfolio {
@@ -307,12 +305,8 @@ button:focus {
 }
 
 .main-text-portfolio {
-  display: flex;
-  flex-direction: column;
-
   gap: 8px;
   padding: 32px 16px;
-
   border: 1px solid #e7e9fc;
   border-top: none;
 }
